--- a/1.html
+++ b/1.html
@@ -17,6 +17,7 @@
 <body>
     <div id="div1"></div>
     <div id="div2"></div>
+    <div id="div3"></div>
 
     <script src="main.js"></script>
 </body>
